samples/_failures_safe/1761493082_42e434_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a99d17d0.c: In function ‘main’:
./samples/SAFE/__tmp_a99d17d0.c:153:17: error: expected ‘;’ at end of input
  153 |     print_matrix
      |                 ^
      |                 ;
./samples/SAFE/__tmp_a99d17d0.c:153:5: error: expected declaration or statement at end of input
  153 |     print_matrix
      |     ^~~~~~~~~~~~
